--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,17 @@
 	</dependency>
   
     <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
-      <version>7.0</version>
+      	<groupId>javax</groupId>
+      	<artifactId>javaee-api</artifactId>
+      	<version>7.0</version>
     </dependency>
 
-    
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>jstl</artifactId>
+    	<version>1.2</version>
+	</dependency>
+
     <dependency>
     	<groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
