--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,13 +3,12 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Wonne Web</display-name>
+
+	<display-name>Wonne Web</display-name>
   
-  <welcome-file-list>
-  	<welcome-file>index.html</welcome-file>
-  	<welcome-file>index.htm</welcome-file>
-  	<welcome-file>index.jsp</welcome-file>  	
-  </welcome-file-list>
+  	<welcome-file-list>
+  		<welcome-file>index.jsp</welcome-file>  	
+  	</welcome-file-list>
   
     <servlet>
     	<servlet-name>RegisterServlet</servlet-name>
@@ -20,5 +19,37 @@
     	<servlet-name>RegisterServlet</servlet-name>
     	<url-pattern>/RegisterServlet</url-pattern>
   	</servlet-mapping>
-  
+	
+	<servlet>
+    	<servlet-name>LoginServlet</servlet-name>
+    	<servlet-class>com.wonne.web.servlet.LoginServlet</servlet-class>
+  	</servlet>
+  	
+  	<servlet-mapping>
+    	<servlet-name>LoginServlet</servlet-name>
+    	<url-pattern>/LoginServlet</url-pattern>
+  	</servlet-mapping>
+  	
+  	<!-- 
+	<filter>
+        <filter-name>loginFilter</filter-name>
+        <filter-class>com.wonne.web.servlet.LoginFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>loginFilter</filter-name>
+        <url-pattern>index.jsp</url-pattern>
+    </filter-mapping>
+     -->
+     
+    <servlet>
+    	<servlet-name>LogoutServlet</servlet-name>
+    	<servlet-class>com.wonne.web.servlet.LogoutServlet</servlet-class>
+  	</servlet>
+  	
+  	<servlet-mapping>
+    	<servlet-name>LogoutServlet</servlet-name>
+    	<url-pattern>/LogoutServlet</url-pattern>
+  	</servlet-mapping>
+  	
 </web-app>
