--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,4 +51,14 @@
     	<url-pattern>/LogoutServlet</url-pattern>
   	</servlet-mapping>
   	
+  	<servlet>
+    	<servlet-name>AdminServlet</servlet-name>
+    	<servlet-class>com.wonne.web.servlet.AdminServlet</servlet-class>
+  	</servlet>
+  	
+  	<servlet-mapping>
+    	<servlet-name>AdminServlet</servlet-name>
+    	<url-pattern>/AdminServlet</url-pattern>
+  	</servlet-mapping>
+  	
 </web-app>
