--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,11 +9,6 @@
   		<welcome-file>index.jsp</welcome-file>  	
   	</welcome-file-list>
   
-  	<context-param>
-        <param-name>logger-config-location</param-name>
-        <param-value>WEB-INF/logback.xml</param-value>
-    </context-param>
-    
     <servlet>
     	<servlet-name>RegisterServlet</servlet-name>
     	<servlet-class>com.wonne.web.servlet.RegisterServlet</servlet-class>
@@ -65,5 +60,31 @@
     	<servlet-name>AdminServlet</servlet-name>
     	<url-pattern>/AdminServlet</url-pattern>
   	</servlet-mapping>
+  	
+  	
+  	<context-param>
+        <param-name>LOGGER_CONFIG</param-name>
+        <param-value>WEB-INF/logback.xml</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>RDS_DRIVER</param-name>
+        <param-value>com.mysql.cj.jdbc.Driver</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>RDS_HOST</param-name>
+        <param-value>wonnedevdb.cmtwfoal5czm.us-east-2.rds.amazonaws.com</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>RDS_PORT</param-name>
+        <param-value>3306</param-value>
+    </context-param>
+    
+  	<context-param>
+        <param-name>RDS_DB_NAME</param-name>
+        <param-value>WonneDB</param-value>
+    </context-param>
   	
 </web-app>
